--- a/index.html
+++ b/index.html
@@ -169,66 +169,13 @@
     </section>
 
     <!-- CONTACT -->
-<section class="section light slide-up" id="contact">
-  <h2>Contact Me</h2>
+<div class="contact-socials">
+  <a class="contact-link" href="https://github.com/AlphaGolf" target="_blank">GitHub</a>
+  <a class="contact-link" href="https://www.linkedin.com/in/abari-godswill-978147119" target="_blank">LinkedIn</a>
+  <a class="contact-link" href="https://twitter.com/AbariGodsw21339" target="_blank">X</a>
+  <a class="contact-link" href="tel:+2349033883397">📞 +234 903 388 3397</a>
+</div>
 
-  <p class="contact-intro">
-    Have a project, job opportunity, or collaboration in mind?  
-    Feel free to reach out — I usually respond within 24 hours.
-  </p>
-
-  <div class="contact-wrapper">
-    <!-- CONTACT INFO -->
-    <div class="contact-info">
-      <p><strong>Email:</strong>  
-        <a href="mailto:abari.godswill@gmail.com">abari.godswill@gmail.com</a>
-      </p>
-
-      <p><strong>Location:</strong> Nigeria (Remote Friendly)</p>
-
-      <div class="contact-socials">
-        <a href="https://github.com/AlphaGolf" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/abari-godswill-978147119" target="_blank">LinkedIn</a>
-        <a href="https://twitter.com/AbariGodsw21339" target="_blank">X</a>
-        <a href="tel:+2349033883397">📞 +2349033883397</a>
-      </div>
-    </div>
-
-    <!-- CONTACT FORM -->
-    <form
-  class="contact-form"
-  action="911godswill@gmail.com"
-  method="POST"
->
-  <input
-    type="text"
-    name="name"
-    placeholder="Your Name"
-    required
-  />
-
-  <input
-    type="email"
-    name="email"
-    placeholder="Your Email"
-    required
-  />
-
-  <textarea
-    name="message"
-    rows="5"
-    placeholder="Your Message"
-    required
-  ></textarea>
-
-  <!-- Anti-spam -->
-  <input type="hidden" name="_subject" value="New Portfolio Contact Message" />
-
-  <button type="submit" class="cv-btn">Send Message</button>
-</form>
-
-  </div>
-</section>
 
 
     <!-- FOOTER -->
