--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </section>
 
     <!-- CONTACT -->
-<div class="contact-socials">
+<div class="contact-socials" id="contact">
   <a class="contact-link" href="https://github.com/AlphaGolf" target="_blank">GitHub</a>
   <a class="contact-link" href="https://www.linkedin.com/in/abari-godswill-978147119" target="_blank">LinkedIn</a>
   <a class="contact-link" href="https://twitter.com/AbariGodsw21339" target="_blank">X</a>
