--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
 
     <!-- CONTACT -->
 <div class="contact-socials" id="contact">
-  <a class="contact-link" href="https://github.com/AlphaGolf" target="_blank">GitHub</a>
-  <a class="contact-link" href="https://www.linkedin.com/in/abari-godswill-978147119" target="_blank">LinkedIn</a>
-  <a class="contact-link" href="https://twitter.com/AbariGodsw21339" target="_blank">X</a>
+  <a class="contact-link" href="https://github.com/AlphaGolf" target="_blank"> <img src="images\icons\twiter.png" alt="GitHub"></a>
+  <a class="contact-link" href="https://www.linkedin.com/in/abari-godswill-978147119" target="_blank"><img src="images\icons\pngwing.com.png" alt="linkedin"></a>
+  <a class="contact-link" href="https://twitter.com/AbariGodsw21339" target="_blank"><img src="images\icons\twiter.png" alt="X"></a>
   <a class="contact-link" href="tel:+2349033883397">📞 +234 903 388 3397</a>
 </div>
 
