latest cv changes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <span>Angular • NestJS • PostgreSQL • MongoDB, Prisma Orm</span>
 
         <!-- CV DOWNLOAD -->
-        <a href="GODSWILLCV.pdf" download class="cv-btn">📄 Download CV</a>
+        <a href="myCv2.pdf" download class="cv-btn">📄 Download CV</a>
         <!-- SOCIAL LINKS -->
         <div class="socials">
             <a href="https://github.com/AlphaGolf" target="_blank" aria-label="GitHub"
